# docs/swagger.yaml
@@ -49,6 +49,30 @@ paths:
       summary: Delete opening
       tags:
       - Openings
+    get:
+      consumes:
+      - application/json
+      description: Show a new job opening
+      parameters:
+      - description: Opening identification
+        in: query
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/handler.ErrorResponse'
+      summary: Show opening
+      tags:
+      - Openings
     post:
       consumes:
       - application/json
